--- a/index.html
+++ b/index.html
@@ -1,1 +1,67 @@
-hello
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Telkraft Danışmanlık</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <div class="container header-container">
+      <img src="logo_poly.svg" alt="Telkraft Logo" class="logo" />
+      <div class="lang-switcher">
+        <button onclick="setLanguage('tr')">TR</button>
+        <button onclick="setLanguage('en')">EN</button>
+      </div>
+    </div>
+  </header>
+
+  <section class="hero">
+    <div class="container">
+      <h1 data-tr="İçerik Üretiminden Öğrenme Deneyimine: Kurumsal Dönüşüm Yolculuğu"
+          data-en="From Content Production to Learning Experience: The Journey of Institutional Transformation">
+        İçerik Üretiminden Öğrenme Deneyimine: Kurumsal Dönüşüm Yolculuğu
+      </h1>
+      <p data-tr="Daha sade süreçler, daha güçlü içerikler, daha etkili öğrenme."
+         data-en="Simpler processes, stronger content, more effective learning.">
+        Daha sade süreçler, daha güçlü içerikler, daha etkili öğrenme.
+      </p>
+    </div>
+  </section>
+
+  <section class="services">
+    <div class="container">
+      <h2 data-tr="Hizmetlerimiz" data-en="Our Services">Hizmetlerimiz</h2>
+
+      <div class="service-box">
+        <h3 data-tr="1. İhtiyaç Analizi ve Durum Tespiti"
+            data-en="1. Needs Analysis and Situation Assessment">1. İhtiyaç Analizi ve Durum Tespiti</h3>
+        <p data-tr="Danışmanlık sürecinin ilk adımı olarak kurumun mevcut içerik üretim yapısı, teknoloji kullanımı, ekip işleyişi ve hedefleri analiz edilir."
+           data-en="As the first step of the consultancy process, the current content production structure, technology use, team workflow and goals are analyzed.">
+           Danışmanlık sürecinin ilk adımı olarak kurumun mevcut içerik üretim yapısı, teknoloji kullanımı, ekip işleyişi ve hedefleri analiz edilir.
+        </p>
+      </div>
+
+      <div class="service-box">
+        <h3 data-tr="2. İçerik Üretiminde Ürün Yönetimi Yaklaşımı"
+            data-en="2. Product Management Approach in Content Production">2. İçerik Üretiminde Ürün Yönetimi Yaklaşımı</h3>
+        <p data-tr="İçerik türleri ürün olarak ele alınır ve yaşam döngüsü boyunca nasıl yönetileceği planlanır."
+           data-en="Content types are treated as products and their lifecycle management is planned.">
+           İçerik türleri ürün olarak ele alınır ve yaşam döngüsü boyunca nasıl yönetileceği planlanır.
+        </p>
+      </div>
+
+      <!-- Diğer hizmetler buraya eklenecek -->
+    </div>
+  </section>
+
+  <footer>
+    <div class="container">
+      <p>© 2025 Telkraft Danışmanlık</p>
+    </div>
+  </footer>
+
+  <script src="scripts.js"></script>
+</body>
+</html>
